--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,7 +30,8 @@
             android:label="@string/title_activity_login" />
         <activity android:name=".activity.NotbookActivity" />
         <activity android:name=".activity.Addnotactivity" />
-        <activity android:name=".activity.Memorandumactivity"></activity>
+        <activity android:name=".activity.Memorandumactivity" />
+        <activity android:name=".activity.AddmemorandActivity"></activity>
     </application>
 
 </manifest>
